pkg/lang/testdata/ub/file/factory/valid/call-to-imported-module.ub
imports: { lib: 'github.com/x/lib' }
outputs: {
  shout: { value: lib.upper(var.name) }
}
