pkg/lang/testdata/ub/file/factory/invalid/call-to-unimported-module.ub
imports: { core: 'github.com/x/core' }
outputs: {
  shout: { value: lib.upper(var.name) }
}
